--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ header {
 
 input {
     width: 100%;
-    height: 100%;
+    height: 15pc;
     background: none;
     border: none;
     font-size: 20px;
@@ -43,10 +43,7 @@ button {
     font-family: 'Ubuntu', sans-serif;
     font-size: 16px;
     border-radius: 16px;
-   /* width: 300px;*/
     width: 100%;
-    /*padding: 20px 0px;
-    margin: 10px;*/
     padding: 14px 0;
     margin-top: 14px;
     border: 1px solid #062371;
@@ -65,6 +62,7 @@ button {
 
 .copiar{
     width: 80%;
+    
 }
 
 .blanco:hover, .azul:hover{
@@ -72,16 +70,10 @@ button {
 }
 
 .cuadroEncriptador {
-    /*display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;*/
     margin: 5px;
     padding: 10px 0px;
     border-radius: 22px;
     background-color: #fff;
-    /*margin: 50px 100px;
-    width: 300px;*/
     text-align: center;
     box-shadow: 1px 10px 30px 5px #d0d0d0be;
 }
@@ -109,24 +101,62 @@ footer {
     padding: 10px;
 }
 
-/* Dispositivos Grandes */ 
+/*Tablets*/
+@media (min-width: 768px) {
+
+    .botones {
+        display: flex;
+        justify-content: center;
+    }
+
+    button {
+        width: 350px;
+        padding: 20px 0px;
+        margin: 15px;
+        }
+}
+
+/* Laptops */
 @media (min-width: 1024px) {
     .contenedor {
     display: flex;
     justify-content: space-evenly;
+    }
+
+    .cuadroEncriptador{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 300px;
+    }
+
+    button {
+        width: 200px;
+        padding: 20px 0px;
+        margin: 10px;
+        }
 }
+
+/* Dispositivos Grandes */ 
+@media (min-width: 1440px) {
+
+    .contenedor {
+    display: flex;
+    justify-content: space-evenly;
+    }
+
+    .cuadroEncriptador{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    }
+
+    button {
+    width: 300px;
+    padding: 20px 0px;
+    margin: 10px;
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
